[package]
name = "cargo-prebuilt"
version = "0.7.0-dev"
edition = "2021"
authors = ["harmless-tech"]
description = "Download prebuilt crate binaries for many different platforms"
readme = "README.md"
license = "MIT"
#homepage = ""
repository = "https://github.com/cargo-prebuilt/cargo-prebuilt"
keywords = ["cargo", "cargo-subcommand", "binary"]
rust-version = "1.70"
include = [
    "keys/",
    "src/",
    "build.rs",
    "Cargo.lock",
    "Cargo.toml",
    "LICENSE",
    "README.md"
]

[dependencies]
anyhow = "1.0.79"
bpaf = { version = "0.9.8", features = ["autocomplete", "batteries"] }
directories = "5.0.1"
flate2 = { version = "1.0.28", optional = true }
hex = "0.4.3"
home = "0.5.9"
indexmap = { version = "2.1.0", features = ["serde"] }
mimalloc = { version = "0.1.39", optional = true }
minisign-verify = { version = "0.2.1", optional = true }
native-tls = { version = "0.2.11", optional = true }
owo-colors = { version = "4.0.0", features = ["supports-colors"], optional = true }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
sha2 = { version = "0.10.8", optional = true }
sha3 = { version = "0.10.8", optional = true }
tar = "0.4.40"
toml = { version = "0.8.8", default-features = false, features = ["parse"] } # TODO: Remove display fow now
ureq = { version = "2.9.1", default-features = false, features = ["gzip", "brotli"] } # TODO: Remove json for now

[features]
default = ["default-rustls"]
default-rustls = ["rustls", "default-no-tls"]
default-native = ["native", "default-no-tls"]
default-no-tls = ["ex-indexes", "sec", "compression", "color"]

# Extend index support
ex-indexes = ["gh-pri"]
#gh-pub = [] # TODO: gh-pub feature should always be enabled since it is built on cuhttp.
gh-pri = []

rustls = ["ureq/tls"]
rustls-native-certs = ["rustls", "ureq/native-certs"]
native = ["native-tls", "ureq/native-tls"]
vendored-openssl = ["native", "native-tls/vendored"]

sec = ["minisign", "sha2", "sha3"]
minisign = ["dep:minisign-verify"]
sha2 = ["dep:sha2"]
sha3 = ["dep:sha3"]

compression = ["gzip"]
gzip = ["dep:flate2"]

color = ["dep:owo-colors", "bpaf/bright-color"]
mimalloc = ["dep:mimalloc"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.small]
inherits = "release"
opt-level = "s"

[profile.quick-build]
inherits = "release"
opt-level = 0
lto = false
codegen-units = 16

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ target }.zip"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ target }.zip"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "zip"
